update build script